--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "dev": "ts-node-dev --inspect --no-notify --transpileOnly --ignore-watch node_modules src/server.ts",
     "db": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.12.0",
     "express": "^4.17.1",
-    "pg": "^8.1.0",
     "reflect-metadata": "^0.1.13",
+    "sqlite3": "^4.2.0",
     "typeorm": "^0.2.24",
     "uuidv4": "^6.0.8"
   },
