--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Templatebackendnodejs",
+  "name": "templatebackendnodejs",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/renatoschlogel/Template-backend-nodejs.git",
